--- a/AUTHORS
+++ b/AUTHORS
@@ -17,7 +17,7 @@ Thanks to
     * Brian Rosner for various patches.
     * Richard Boulton for feedback and suggestions.
     * Cyberdelia for feedback and patches.
-    * Jannis Leidel for consistently "walking behind the elephant" and cleaning up the setup.py.
+    * Jannis Leidel for consistently "walking behind the elephant", cleaning up the setup.py & the initial geospatial implementation.
     * Ask Solem for for patching the setup.py.
     * Ben Spaulding for feedback and documentation patches.
     * smulloni for various patches.
@@ -55,4 +55,5 @@ Thanks to
         * a multiprocessing-enabled version of ``update_index``.
         * the addition of ``--start/--end`` options in ``update_index``.
         * the ability to specify both apps & models to ``update_index``.
+        * A significant portion of the geospatial & function query features.
     * Aram Dulyan (Aramgutang) for fixing the included admin class to be Django 1.4 compatible.
